<resources>
    <string name="app_name">ProgrammingSamples</string>

    <string name="title_activity_gc">Garbage Collection</string>
    <string name="title_activity_android">Android System</string>
    <string name="title_activity_threads">Threads</string>
    <string name="title_activity_threads_android">Android Threads</string>
    <string name="title_activity_single_top">Single Top</string>
    <string name="title_activity_single_task">Single Task</string>
    <string name="title_activity_single_instance">Single Instance</string>
    <string name="title_activity_algorithm">Algorithms</string>
    <string name="title_activity_lifecycle">Lifecycle</string>
    <string name="title_activity_views">Views</string>
    <string name="title_activity_rx">Rx Java</string>


    <string name="blank_fragment_1">Fragment 1</string>
    <string name="blank_fragment_2">Fragment 2</string>

</resources>
