<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/singleTopButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/title_activity_single_top" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/singleTaskButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="15dp"
            android:text="@string/title_activity_single_task" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/singleInstanceButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="15dp"
            android:text="@string/title_activity_single_instance" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/lifecycleButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="25dp"
            android:text="@string/title_activity_lifecycle" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
